--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cogitron Master Pro</title>
+    <title>Cogitron Turbo Louis</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Rajdhani:wght@600&display=swap" rel="stylesheet">
@@ -12,21 +12,21 @@
         body { font-family: 'Inter', sans-serif; background: var(--bg); color: white; margin: 0; display: flex; height: 100vh; overflow: hidden; }
         .sidebar { width: 280px; background: #11131f; border-right: 1px solid #333; display: flex; flex-direction: column; padding: 20px; transition: 0.3s; z-index: 1000; }
         @media (max-width: 1024px) { .sidebar { position: absolute; left: -320px; height: 100%; } .sidebar.open { left: 0; } }
-        .logo { font-family: 'Rajdhani'; color: var(--blue); font-size: 1.8rem; text-shadow: 0 0 10px var(--blue); margin-bottom: 10px; }
-        .btn-new { border: 1px solid var(--pink); background: none; color: var(--pink); padding: 10px; border-radius: 10px; cursor: pointer; font-weight: bold; margin: 10px 0; width: 100%; }
+        .logo { font-family: 'Rajdhani'; color: var(--blue); font-size: 1.8rem; text-shadow: 0 0 10px var(--blue); margin-bottom: 15px; }
+        .btn-new { border: 1px solid var(--pink); background: none; color: var(--pink); padding: 10px; border-radius: 10px; cursor: pointer; font-weight: bold; margin: 5px 0; width: 100%; }
         .btn-prof { border: 1px solid #ffcc00; background: none; color: #ffcc00; padding: 10px; border-radius: 10px; cursor: pointer; font-weight: bold; margin-bottom: 15px; width: 100%; }
         .history { flex-grow: 1; overflow-y: auto; }
-        .chat-link { display: flex; align-items: center; justify-content: space-between; padding: 10px; margin-bottom: 5px; border-radius: 8px; background: rgba(255,255,255,0.05); cursor: pointer; font-size: 0.85rem; }
-        .chat-link.active { border-left: 3px solid var(--blue); background: rgba(0, 212, 255, 0.1); }
+        .chat-link { display: flex; align-items: center; justify-content: space-between; padding: 10px; margin-bottom: 5px; border-radius: 8px; background: rgba(255,255,255,0.05); cursor: pointer; font-size: 0.85rem; border: 1px solid transparent; }
+        .chat-link.active { border: 1px solid var(--blue); background: rgba(0, 212, 255, 0.1); }
         .main { flex-grow: 1; display: flex; flex-direction: column; position: relative; }
         .menu-toggle { display: none; position: absolute; top: 15px; left: 15px; z-index: 1100; background: var(--blue); border: none; padding: 10px; border-radius: 5px; font-weight: bold; }
         @media (max-width: 1024px) { .menu-toggle { display: block; } }
-        #chat-window { flex-grow: 1; overflow-y: auto; padding: 60px 10% 120px 10%; display: flex; flex-direction: column; gap: 15px; }
-        .msg { max-width: 85%; padding: 15px; border-radius: 15px; line-height: 1.4; position: relative; }
+        #chat-window { flex-grow: 1; overflow-y: auto; padding: 60px 5% 120px 5%; display: flex; flex-direction: column; gap: 15px; }
+        .msg { max-width: 85%; padding: 15px; border-radius: 15px; line-height: 1.4; position: relative; word-wrap: break-word; }
         .user { align-self: flex-end; background: #2b2d3e; border-right: 4px solid var(--pink); }
         .bot { align-self: flex-start; background: #1e2235; border-left: 4px solid var(--blue); }
-        .input-box { padding: 20px 5%; position: absolute; bottom: 0; width: 90%; left: 5%; }
-        .input-wrap { display: flex; background: #252839; border-radius: 15px; padding: 10px 15px; border: 1px solid #3d405b; }
+        .input-box { padding: 20px 5%; position: absolute; bottom: 0; width: 90%; left: 0; }
+        .input-wrap { display: flex; background: #252839; border-radius: 15px; padding: 10px 15px; border: 1px solid #3d405b; margin: 0 auto; max-width: 800px; }
         input { flex-grow: 1; background: none; border: none; color: white; outline: none; font-size: 1rem; }
         #auth { position: fixed; inset: 0; background: var(--bg); z-index: 3000; display: flex; align-items: center; justify-content: center; }
         .auth-card { background: #161925; padding: 30px; border-radius: 20px; border: 1px solid var(--blue); width: 320px; text-align: center; }
@@ -39,74 +39,70 @@
 <div id="auth">
     <div class="auth-card">
         <h1 class="logo">COGITRON</h1>
-        <input type="email" id="email" placeholder="Email" style="width:100%; margin:5px 0; padding:10px; background:#000; color:#fff;">
-        <input type="password" id="pass" placeholder="Mot de passe" style="width:100%; margin:5px 0; padding:10px; background:#000; color:#fff;">
-        <div id="signup-fields" style="display:none;"><input type="text" id="nick" placeholder="Pseudo" style="width:100%; margin:5px 0; padding:10px; background:#000; color:#fff;"></div>
-        <button onclick="handleAuth()" style="width:100%; padding:12px; background:var(--blue); border:none; margin-top:10px; font-weight:bold; cursor:pointer;">VALIDER</button>
-        <p onclick="let s=document.getElementById('signup-fields'); s.style.display=s.style.display==='none'?'block':'none';" style="cursor:pointer; font-size:0.8rem; color:#888; margin-top:10px;">Login / Inscription</p>
+        <input type="email" id="email" placeholder="Email" style="width:100%; margin:5px 0; padding:10px; background:#000; color:#fff; border:1px solid #333;">
+        <input type="password" id="pass" placeholder="Mot de passe" style="width:100%; margin:5px 0; padding:10px; background:#000; color:#fff; border:1px solid #333;">
+        <button onclick="handleAuth()" style="width:100%; padding:12px; background:var(--blue); border:none; margin-top:10px; font-weight:bold; cursor:pointer; border-radius:8px;">CONNEXION</button>
     </div>
 </div>
 
 <div class="sidebar" id="sidebar">
     <h2 class="logo">COGITRON</h2>
     <button class="btn-new" onclick="startNormalChat()">+ Nouveau Chat</button>
-    <button class="btn-prof" onclick="activateProfMode()">🎓 Mode Prof (Révisions)</button>
+    <button class="btn-prof" onclick="activateProfMode()">🎓 Mode Prof</button>
     <div class="history" id="history"></div>
-    <button onclick="sb.auth.signOut();location.reload()" style="color:red; background:none; border:none; cursor:pointer; margin-top:20px;">🚪 Quitter</button>
+    <button onclick="sb.auth.signOut();location.reload()" style="color:red; background:none; border:none; cursor:pointer; margin-top:20px; font-size:0.8rem;">🚪 Déconnexion</button>
 </div>
 
 <div class="main">
     <div id="chat-window"></div>
     <div class="input-box">
         <div class="input-wrap">
-            <input type="text" id="user-input" placeholder="Message..." onkeypress="if(event.key==='Enter') askAI()">
-            <button onclick="askAI()" style="background:var(--blue); border:none; border-radius:10px; padding:10px; font-weight:bold;">ENVOYER</button>
+            <input type="text" id="user-input" placeholder="Écris ici..." onkeypress="if(event.key==='Enter') askAI()">
+            <button onclick="askAI()" style="background:var(--blue); border:none; border-radius:10px; padding:8px 15px; font-weight:bold; cursor:pointer;">OK</button>
         </div>
     </div>
 </div>
 
 <script>
     const MISTRAL_KEY = "qa0N1MUpsE6kO0WkQQESX0DpAZ2lg6b0";
+    const GROQ_KEY = "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";
     const SB_URL = "https://mrzevhvpoltsobxtkpxe.supabase.co";
     const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yemV2aHZwb2x0c29ieHRrcHhlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5MTY2MDksImV4cCI6MjA4NjQ5MjYwOX0.4NOt_j0aP02Nh-E_7mJy32hE8Q0ag0gA32PXgxNpSvU";
+    
     const sb = supabase.createClient(SB_URL, SB_KEY);
-
     let user = null, chatId = null, isProfMode = false;
 
     async function handleAuth() {
-        const email = document.getElementById('email').value, p = document.getElementById('pass').value, nick = document.getElementById('nick').value;
-        const isSignup = document.getElementById('signup-fields').style.display === 'block';
-        if(isSignup) {
-            await sb.auth.signUp({email, password:p, options:{data:{nickname:nick}}});
-            alert("Vérifie tes mails !");
-        } else {
-            const {error} = await sb.auth.signInWithPassword({email, password:p});
-            if(error) alert("Erreur de connexion");
-        }
+        const email = document.getElementById('email').value, p = document.getElementById('pass').value;
+        const {data, error} = await sb.auth.signInWithPassword({email, password:p});
+        if(error) alert("Erreur : " + error.message);
+        else { user = data.user; setupApp(); }
     }
 
-    // NOUVEAU CHAT NORMAL
+    function setupApp() {
+        document.getElementById('auth').style.display = 'none';
+        refreshSidebar();
+    }
+
     async function startNormalChat() {
-        isProfMode = false; // On désactive le mode prof
+        isProfMode = false;
         await createChatRecord("Nouvelle discussion");
     }
 
-    // NOUVEAU CHAT PROF
     async function activateProfMode() {
-        isProfMode = true; 
+        isProfMode = true;
         await createChatRecord("🎓 Révisions");
-        addMsg("Salut Louis ! Je passe en **Mode Prof**. Dis-moi ce qu'on révise aujourd'hui ?", "bot");
+        addMsg("Mode Prof activé ! On révise quoi ?", "bot");
     }
 
     async function createChatRecord(title) {
         if(!user) return;
-        const {data} = await sb.from('chats').insert([{user_id: user.id, title: title}]).select();
+        const {data, error} = await sb.from('chats').insert([{user_id: user.id, title: title}]).select();
         if(data) {
             chatId = data[0].id;
             document.getElementById('chat-window').innerHTML = '';
             refreshSidebar();
-            if(window.innerWidth < 1024) document.getElementById('sidebar').classList.remove('open');
-        }
+        } else { console.error("Erreur création chat:", error); }
     }
 
     async function refreshSidebar() {
@@ -117,24 +113,22 @@
         if(data) data.forEach(c => {
             const d = document.createElement('div');
             d.className = `chat-link ${c.id === chatId ? 'active' : ''}`;
-            d.innerHTML = `<span style="flex:1" onclick="loadChat('${c.id}')">${c.title}</span><span onclick="deleteChat('${c.id}')">🗑️</span>`;
+            d.innerHTML = `<span style="flex:1; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;" onclick="loadChat('${c.id}')">${c.title}</span><span onclick="deleteChat('${c.id}')" style="margin-left:5px;">🗑️</span>`;
             container.appendChild(d);
         });
     }
 
     async function loadChat(id) {
         chatId = id;
-        const {data} = await sb.from('messages').select('*').eq('chat_id', id).order('created_at', {ascending:true});
+        const {data, error} = await sb.from('messages').select('*').eq('chat_id', id).order('created_at', {ascending:true});
         document.getElementById('chat-window').innerHTML = '';
-        if(data) data.forEach(m => addMsg(m.content, m.role === 'user' ? 'user' : 'bot'));
+        if(data) {
+            data.forEach(m => addMsg(m.content, m.role === 'user' ? 'user' : 'bot'));
+        }
+        const {data:chat} = await sb.from('chats').select('title').eq('id', id).single();
+        isProfMode = chat?.title.includes("🎓");
         refreshSidebar();
-        // Essayer de détecter si c'est un chat prof par le titre
-        const {data:chatInfo} = await sb.from('chats').select('title').eq('id', id).single();
-        isProfMode = chatInfo?.title.includes("🎓");
-    }
-
-    async function deleteChat(id) {
-        if(confirm("Supprimer ?")) { await sb.from('chats').delete().eq('id', id); refreshSidebar(); }
+        if(window.innerWidth < 1024) document.getElementById('sidebar').classList.remove('open');
     }
 
     async function askAI() {
@@ -144,64 +138,80 @@
 
         addMsg(text, 'user');
         input.value = '';
-        await sb.from('messages').insert([{chat_id: chatId, user_id: user.id, role:'user', content: text}]);
 
-        let prompt = isProfMode ? "Tu es un prof. Pose une question courte sur le sujet de l'élève pour le tester." : "Tu es Cogitron, IA cool pour ado de 12 ans.";
+        // Sauvegarde avec sécurité user.id
+        const {error: errSave} = await sb.from('messages').insert([{chat_id: chatId, user_id: user.id, role:'user', content: text}]);
+        if(errSave) console.error("Erreur save user:", errSave);
 
-        const res = await fetch("https://api.mistral.ai/v1/chat/completions", {
+        let systemMsg = isProfMode ? "Tu es un prof. Pose une question à l'élève." : "Tu es Cogitron, IA cool.";
+
+        // APPEL GROQ (TA CLÉ)
+        try {
+            const res = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+                method: "POST",
+                headers: {"Authorization": `Bearer ${GROQ_KEY}`, "Content-Type": "application/json"},
+                body: JSON.stringify({
+                    model: "llama3-8b-8192",
+                    messages: [{role:"system", content:systemMsg}, {role:"user", content:text}]
+                })
+            });
+            const data = await res.json();
+            const reply = data.choices[0].message.content;
+            addMsg(reply, 'bot');
+            await sb.from('messages').insert([{chat_id: chatId, user_id: user.id, role:'bot', content: reply}]);
+            
+            // TITRE AUTO SI BESOIN
+            const {data:msgs} = await sb.from('messages').select('id').eq('chat_id', chatId);
+            if(msgs && msgs.length < 3 && !isProfMode) {
+                updateTitle(text);
+            }
+        } catch(e) { console.error("Erreur Groq:", e); }
+    }
+
+    async function updateTitle(text) {
+        const n = await fetch("https://api.mistral.ai/v1/chat/completions", {
             method: "POST",
             headers: {"Authorization": `Bearer ${MISTRAL_KEY}`, "Content-Type": "application/json"},
-            body: JSON.stringify({
-                model: "mistral-large-latest", 
-                messages: [{role:"system", content: prompt}, {role:"user", content:text}]
-            })
+            body: JSON.stringify({model: "mistral-tiny", messages: [{role:"user", content:"Titre 2 mots pour : "+text}]})
         });
-        const data = await res.json();
-        const reply = data.choices[0].message.content;
-        addMsg(reply, 'bot');
-        await sb.from('messages').insert([{chat_id: chatId, user_id: user.id, role:'bot', content: reply}]);
-
-        // Mise à jour du titre auto
-        const { data: mList } = await sb.from('messages').select('id').eq('chat_id', chatId);
-        if(mList && mList.length < 3 && !isProfMode) {
-            const n = await fetch("https://api.mistral.ai/v1/chat/completions", {
-                method: "POST",
-                headers: {"Authorization": `Bearer ${MISTRAL_KEY}`, "Content-Type": "application/json"},
-                body: JSON.stringify({model: "mistral-tiny", messages: [{role:"user", content:"Titre court (2-3 mots max) pour : "+text}]})
-            });
-            const nd = await n.json();
-            await sb.from('chats').update({title: nd.choices[0].message.content.replace(/"/g, '')}).eq('id', chatId);
-            refreshSidebar();
-        }
+        const nd = await n.json();
+        const t = nd.choices[0].message.content.replace(/"/g, '');
+        await sb.from('chats').update({title: t}).eq('id', chatId);
+        refreshSidebar();
     }
 
     function addMsg(t, type) {
+        const win = document.getElementById('chat-window');
         const d = document.createElement('div');
         d.className = `msg ${type}`;
         d.innerHTML = marked.parse(t);
         if(type === 'bot') {
             const b = document.createElement('button');
-            b.innerHTML = "🔊 ÉCOUTER";
-            b.style = "background:none; border:1px solid var(--blue); color:var(--blue); font-size:0.7rem; cursor:pointer; margin-top:10px; border-radius:5px;";
+            b.innerHTML = "🔊"; b.style="background:none; border:none; color:var(--blue); cursor:pointer; font-size:1rem; display:block; margin-top:5px;";
             b.onclick = () => speak(t);
             d.appendChild(b);
         }
-        document.getElementById('chat-window').appendChild(d);
-        document.getElementById('chat-window').scrollTop = 100000;
+        win.appendChild(d);
+        win.scrollTop = win.scrollHeight;
     }
 
     function speak(t) {
         window.speechSynthesis.cancel();
-        let cleanText = t.replace(/([\u2700-\u27BF]|[\uE000-\uF8FF]|\uD83C[\uDC00-\uDFFF]|\uD83D[\uDC00-\uDFFF]|[\u2011-\u26FF]|\uD83E[\uDC00-\uDFFF])/g, '');
-        cleanText = cleanText.replace(/[#*`_]/g, '');
-        const u = new SpeechSynthesisUtterance(cleanText);
-        u.lang = 'fr-FR';
+        const clean = t.replace(/([\u2700-\u27BF]|[\uE000-\uF8FF]|\uD83C[\uDC00-\uDFFF]|\uD83D[\uDC00-\uDFFF]|[\u2011-\u26FF]|\uD83E[\uDC00-\uDFFF])/g, '').replace(/[#*`_]/g, '');
+        const u = new SpeechSynthesisUtterance(clean); u.lang = 'fr-FR';
         window.speechSynthesis.speak(u);
     }
 
-    sb.auth.onAuthStateChange((e, s) => {
-        if(s) { user = s.user; document.getElementById('auth').style.display='none'; refreshSidebar(); }
-    });
+    async function deleteChat(id) {
+        if(confirm("Supprimer ?")) { 
+            await sb.from('messages').delete().eq('chat_id', id);
+            await sb.from('chats').delete().eq('id', id); 
+            if(chatId === id) { chatId = null; document.getElementById('chat-window').innerHTML = ''; }
+            refreshSidebar(); 
+        }
+    }
+
+    sb.auth.onAuthStateChange((e, s) => { if(s) { user = s.user; setupApp(); } });
 </script>
 </body>
 </html>
